--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Websocket Chatting</title>
     <script>
-        const ws = new WebSocket("ws://localhost:8001")
+        const ws = new WebSocket("ws://websocket-gold.vercel.app/")
 
         // 메세지 전송
         function clearMessage() {
